resize box and minor fix about align

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+
 header{
 	text-align : center;	
+	margin : 20px;
 }
 article{
 	margin-top : 50px;
@@ -7,6 +9,7 @@ article{
 	display: flex;
 	justify-content: center;
     align-items: center;
+	height:40%;
 }
 footer{
 	text-align:center; 
@@ -25,7 +28,7 @@ footer{
 	border-width : 2px;
 	border-radius : 10%;
 	
-	width : 300px;
+	width : 270px;
 	height : 250px;
 	
 	margin : 10px;
@@ -35,11 +38,12 @@ footer{
 }
 .inCOnt{
 	padding : 10px;
+	text-align : center;
 }
 
 
 @media screen and (max-width: 769px) {
 	article{
 		flex-direction : column;
-	}
+	} 
 }
